--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
     "del": "^5.1.0",
+    "font": "0.0.4",
     "gulp": "4.0.x",
     "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
